# routes/user.js
@@ -2,16 +2,24 @@ const express = require("express");
 const router = express.Router();
 
 const commentController = require("../controllers/user");
+const Auth = require("../helpers/auth");
 const { getUserValidations } = require("../middleware/validate");
 
-router.get("/", commentController.getAll);
+router.get("/", Auth.login, commentController.getAll);
 
 router.get("/:id", commentController.getSingle);
 
 router.post("/", getUserValidations(), commentController.createUser);
 
-router.put("/:id", getUserValidations(), commentController.updateUser);
+router.post("/login", getUserValidations(), commentController.loginUser);
 
-router.delete("/:id", commentController.deleteUser);
+router.put(
+  "/:id",
+  Auth.login,
+  getUserValidations(),
+  commentController.updateUser
+);
+
+router.delete("/:id", Auth.login, commentController.deleteUser);
 
 module.exports = router;
